Do not use overlays when VR shell is enabled.

Fixes VR Shell showing black screen for video when fullscreening.

BUG=654851

Review-Url: https://codereview.chromium.org/2439543003
Cr-Commit-Position: refs/heads/master@{#439241}

Former-commit-id: 2ff7bf42dc2fac16bf7a63507be68e655f3ccfcc